<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indian"
            android:textColor="@color/black"
            android:textStyle="bold"            />

        <TextView
            style="@style/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/F"
            android:textColor="@color/black"
            android:textStyle="bold"

            />

        <TextView
            style="@style/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oo"
            android:textColor="@color/main_color"
            android:textStyle="bold"

            />

        <TextView
            style="@style/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:textColor="@color/black"
            android:textStyle="bold"

            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>