<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/Search"
        style="@style/text_size_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="75dp"
        android:text="@string/signup_to"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/text_size_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/m"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/Search"
        app:layout_constraintTop_toTopOf="@+id/Search" />

    <TextView
        android:id="@+id/textView1"
        style="@style/text_size_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ea"
        android:textColor="@color/main_color"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/Search" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text_size_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/Search" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="@dimen/height_edittext"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/edittext_signup"
        android:drawableEnd="@drawable/baseline_search_35"
        android:hint="@string/enter_username"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Search" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="@dimen/height_edittext"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_signup"
        android:drawableEnd="@drawable/baseline_search_35"
        android:hint="@string/enter_password"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigth_button_signyp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/main_color"
        app:cardCornerRadius="@dimen/cornerradius_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>