<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".fragments.About"
        >

    <TextView
        android:id="@+id/indianFood"
        style="@style/text_size_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="80dp"
        android:text="@string/indian"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/text_size_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/F"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/indianFood"
        app:layout_constraintTop_toTopOf="@+id/indianFood" />

        <TextView
            android:id="@+id/textView1"
            style="@style/text_size_big"
            android:textColor="@color/myColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oo"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            style="@style/text_size_big"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d"
            app:layout_constraintStart_toEndOf="@+id/textView1"
            app:layout_constraintTop_toTopOf="@+id/textView" />



        <ImageView
            android:id="@+id/imageViewAbout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_image_about"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indianFood" />

        <TextView
            android:id="@+id/detailIndianFood"
            style="@style/text_size_small"
            android:textSize="17sp"
            android:paddingEnd="15dp"
            android:layout_marginTop="20dp"
            android:paddingStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_about"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAbout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
