<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indian"
            android:textColor="@color/black"
            android:fontFamily="@font/charm_bold"
            />

        <TextView
            style="@style/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/F"
            android:textColor="@color/black"
            android:fontFamily="@font/charm_bold"

            />

        <TextView
            style="@style/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oo"
            android:textColor="@color/main_color"
            android:fontFamily="@font/charm_bold"

            />

        <TextView
            style="@style/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:textColor="@color/black"
            android:fontFamily="@font/charm_bold"

            />

    </LinearLayout>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/linear"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/flipFoodImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/burger"
            android:scaleType="centerCrop"></ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/gradient_food_img"
                android:gravity="bottom"
                >
                <TextView
                    android:id="@+id/mealsName"
                    style="@style/text_size_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indian"
                    android:textColor="@color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/costMeals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_size_small"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/icon_price"
                    android:text="50"
                    android:layout_marginLeft="20dp"
                    android:alpha="1"></TextView>
                <TextView
                    android:id="@+id/timeMeals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_size_small"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/baseline_timer_24"
                    android:text="50"
                    android:layout_marginLeft="20dp"
                    android:alpha="1"></TextView>
                </LinearLayout>
            </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>